# cwac-anddown

./: CONTRIBUTING.md  README.markdown  settings.gradle
anddown/: .project  AndroidManifest.xml  CMakeLists.txt  build.gradle
anddown/jni/: Android.mk
anddown/jni/src/: html.c  html_smartypants.c
anddown/src/androidTest/java/com/commonsware/cwac/anddown/test/: MarkdownTest.java
anddown/src/main/: AndroidManifest.xml
anddown/src/main/cpp/: com_commonsware_cwac_anddown_AndDown.h
anddown/src/main/java/com/commonsware/cwac/anddown/: AndDown.java
anddown/src/main/jni/: Android.mk  Application.mk  anddown.c
demo/: .project  AndroidManifest.xml  build.gradle  build.xml  project.properties
demo/res/layout/: main.xml
demo/res/raw/: readme.txt
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/commonsware/cwac/anddown/demo/: AndDownDemoActivity.java
demo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  anddown.c
jni/html/: houdini_html_e.c
